# elo_rating_system

./: CMakeLists.txt
include/: elo_rating_system
src/: elo_rating_system.cpp
src/cmake/: CMakeLists.txt
src/nix/: derivation.nix
test/: elo_rating_system.cpp
test/cmake/: CMakeLists.txt
